# BEM2D

./: .gitignore  CMakeLists.txt  README.md  README.tex.md
dev/: testBEM.cpp  testBEMAssemble.cpp  testBEMCone.cpp  testBEMIntegral.cpp  testBEMMixed.cpp  testDynamicCone.cpp  testElliptic.cpp  testLegendre.cpp  testQuadrature.cpp
resources/testBEM/: checkLayerIntegral.ipynb  plot.ipynb  plotSpline.ipynb
resources/testBEM/.ipynb_checkpoints/: plot-checkpoint.ipynb
resources/testBEMAssemble/: checkBEMIntegral.ipynb
resources/testBEMCone/: plot.ipynb
resources/testBEMIntegral/: checkBEMIntegral.ipynb  plotSpline.ipynb
resources/testBEMMixed/: plot.ipynb
resources/testNumericTools/: plotError.ipynb  plotNumeric.nb
src/: boundaryElement.cpp  boundaryElement.hpp  dynamicCone.cpp  dynamicCone.hpp  element.cpp  element.hpp  ellipticIntegral.cpp  legendrePoly.hpp  node.hpp  quadratureRules.cpp  quadratureRules.hpp
src/bem2D/: boundaryElement.cpp  element.hpp
src/bem2D/io/: ini.c  ini.h  iniReader.cpp  iniReader.hpp  ioEigen.cpp  ioEigen.hpp  utilities.cpp
src/io/: ioEigen.cpp  utilities.cpp  utilities.hpp
src/numericTools/: ellipticIntegral.hpp  geometry2D.cpp  geometry2D.hpp  lagrangeBasis.cpp  lagrangeBasis.hpp  legendrePoly.cpp  quadratureRules.cpp
